// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeaderNav Container renders add action button on home page 1`] = `
<div>
  <header
    class="header-nav-container"
  >
    <div
      class="header-nav"
    >
      <div
        class="header-nav__logo-container"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
      <div
        class="header-nav__btn-container"
      >
        <button
          class="btn btn--secondary btn--with-icon"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-plus fa-w-14 fa-xs "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
            />
          </svg>
          Add Movie
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`SiteHeaderNav Container renders search action button on movie detail page 1`] = `
<div>
  <header
    class="header-nav-container header-nav-container--with-bg"
  >
    <div
      class="header-nav"
    >
      <div
        class="header-nav__logo-container"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
      <div
        class="header-nav__btn-container"
      >
        <a
          class="color--primary"
          href="/"
          title="Search movies"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-search fa-w-16 fa-lg fa-rotate-90 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </header>
</div>
`;
